<resources>
    <string name="app_name">Bokjab Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_signin_email">Email</string>
    <string name="edit_signin_password">Password</string>
    <string name="button_signin_signin">SIGN IN</string>
    <string name="button_signin_register">REGISTER</string>
    <string name="edit_register_firstName">First Name</string>
    <string name="edit_register_lastName">Last Name</string>
    <string name="edit_register_email">Email</string>
    <string name="edit_register_password">Password</string>
    <string name="edit_register_rePassword">Retype Password</string>
    <string name="button_register_register">REGISTER</string>
    <string name="text_success_display">email</string>
    <string name="action_next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="action_link">Full Post</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_weather">Weather</string>
    <string name="title_contact">Contact</string>
    <string name="title_signin">SignIn</string>
    <string name="title_register">Register</string>
    <string name="text_home_title">Welcome !</string>
    <string name="edit_register_username">Username</string>
    <string name="edit_contact_name">Name</string>
    <string name="edit_contact_status">I am feeling good today !</string>
    <string name="edit_contact_send_msg">Send Message</string>
    <string name="edit_search_friend">Search Friend</string>
    <string name="edit_search_friend_by">name, nickname, email</string>
    <string name="edit_search">search</string>
    <string name="edit_search_requst">Send Friend Request !</string>
    <string name="edit_search_send_msg">Send Message !</string>
    <string name="create_chat">Enter Name</string>

    <string name="edit_search_result_name">User name : </string>
    <string name="edit_search_result_nickname">User nickname : </string>
    <string name="edit_search_result_email">User email : </string>


    <string name="button_setting_signout">Sign Out</string>
    <string name="checkbox_login_remember">Remember me</string>
    <string name="text_login_forgot">Forgot Password ?</string>

    <string name="default_theme">Default Theme</string>
    <string name="dark">Dark Theme</string>
    <string name="NoActionBar">NoActionBar Theme</string>

    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="text_enter_city">Enter Zip Code</string>
    <string name="button_search">Search</string>
    <string name="base_url">https://tcss450-team6.herokuapp.com/</string>
    <string name="title_activity_maps">Map</string>

    <string name="label_location">Current location:</string>
    <string name="title_chat_list">Chat List</string>
    <string name="title_create_chat_room">Create Chat Room</string>

</resources>